infrastructure/haraka/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: haraka
  labels:
    app: haraka
spec:
  #type: LoadBalancer
  type: ClusterIP
  #clusterIP: None  # headless service for statefulset
  selector:
    app: haraka
  ports:
  - name: smtp
    port: 25
    targetPort: smtp
